# CoreMarket

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  docker-compose.gcp.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: a1c3f9e82b55_add_view_count_to_items.py  b3d7a9e2f1c8_store_image_keys_instead_of_urls.py  b8fad5b42210_home7.py  c7e3a1d09f44_add_blog_tables.py  de06aeaed17c_add_group_to_characteristics.py  f2b8e4c91a03_blog_posts_use_catalog_categories.py
backend/scripts/seeds/: create_admin.py  seed_catalog.py
backend/src/backend/: celery_app.py  config.py  logging_setup.py  main.py  metrics.py  otel.py
backend/src/backend/middleware/: logging_middleware.py  metrics_middleware.py
backend/src/backend/scripts/: reindex.py
backend/src/backend/search/: client.py
backend/tests/: conftest.py
backend/tests/application/auth/: conftest.py  test_change_password.py  test_get_me.py  test_login_user.py  test_refresh_token.py  test_update_me.py
backend/tests/application/blog/: conftest.py  test_add_blog_post_tag.py  test_archive_blog_post.py  test_create_blog_post.py  test_create_blog_tag.py  test_delete_blog_post.py  test_delete_blog_tag.py  test_get_blog_post.py  (+8 more)
backend/tests/presentation/: conftest.py  test_homepage.py  test_smoke.py
backend/tests/search/: test_autocomplete_query.py  test_item_query_builder.py  test_item_sync.py  test_queries.py  test_search_service.py  test_sync.py
backend/tests/tasks/: conftest.py  test_cleanup_expired_sessions.py  test_compute_homepage_snapshot.py  test_delete_item_from_index.py  test_generate_thumbnail.py  test_images.py  test_index_item.py  test_notifications.py  test_recalculate_item_rating.py
(+475 files in other folders)
