[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "L0bster56",email = "sanjaranvarov55563@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "python-jose (>=3.3.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "python-multipart (>=0.0.9,<1.0.0)",
    "aiofiles (>=23.0.0,<25.0.0)",
    "aioboto3 (>=13.0.0,<14.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "pytest (>=8.2,<10.0.0)",
    "pytest-asyncio (>=0.24.0,<1.0.0)",
    "fastapi-utils (>=0.7.0,<1.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "typing-inspect (>=0.9.0,<0.10.0)",
    "mistune (>=3.0.0,<4.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "celery[redis] (>=5.4.0,<6.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "flower (>=2.0.0,<3.0.0)",
    "Pillow (>=10.0.0,<12.0.0)",
    "elasticsearch[async] (>=8.0.0,<9.0.0)",
    "prometheus-client (>=0.19.0,<1.0.0)",
    "opentelemetry-sdk (>=1.20.0,<2.0.0)",
    "opentelemetry-api (>=1.20.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.40b0)",
    "opentelemetry-instrumentation-sqlalchemy (>=0.40b0)",
    "opentelemetry-instrumentation-redis (>=0.40b0)",
    "opentelemetry-instrumentation-celery (>=0.40b0)",
    "opentelemetry-exporter-otlp-proto-grpc (>=1.20.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx (>=0.28.1,<0.29.0)"
]
